Dodanie button i zaktualizowanie strony

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 				<div id="mystory">
 					<h1 class="subtitle">Moja krótka historia</h1>
 					<p> Jako dziecko i nastolatek, moje życie kręciło się wokół piłki nożnej. Uwielbiałem to uczucie dążenia do celu, wygrywania i ciągłej pracy nad sobą. Sport ukształtował mnie i jestem z tego bardzo zadowolony. Gdy uzyskałem pełnoletniość, postanowiłem uczyć się ekonomii i zarządzania. Byłem wyróżniającym się studentem. Dzięki temu jeszcze w trakcie nauki pracowałem jako specjalista ds. rozwoju miast. Praca ta jednak w pewnym momencie nie dawała mi już satysfakcji. Postanowiłem wiec znaleźć lepszą przestrzeń dla siebie.</p>
-					<p> Chociaż to nie było proste, postanowiłem zrezygnować z pracy i skupić się na przekwalifikowaniu. Opracowałem mini plan rozwoju. Zdecydowałem się, że dziedziny na których warto się skoncentrować to programowanie i analiza danych. Z tą drugą dyscypliną miałem już nieco do czynienia. Jako specjalista ds. miast pracowałem nad strategiami, w których ważnymi częściami były analizy uwarunkowań. Programowanie również nie było mi zupełnie obce. Jestem absolwentem szkoły technicznej i posiadam tytuł technika elektronika, a szkole średniej miałem przyjemność programowania w języku C++. </p>
-					<p> To co charakteryzuje mnie, jako osobę, to chyba determinacja, wizjonerstwo, chęć nauki i rozwoju, szukanie odpowiedzi na trudne pytania. Staram się codziennie czytać wartościowe książki. Jestem również zaciekawiony światem filozofii i psychologii. </p>
-					<p> Aktualnie pracuje jako trener piłki nożnej, tworzę projekty: Portal o lokalnych produktach, blog o przekwalifikowaniu się. </p>
+					<p> Chociaż to nie było proste, postanowiłem zrezygnować z pracy i skupić się na przekwalifikowaniu. Opracowałem swój własny plan rozwoju, który skoncentrował się wokół programowania. Obrany kierunek został poparty kilkoma wskazówkami. Moje predyspozycje, cechy charakteru, sposób pracy, nabyte nawyki doskonale pasuję do charakterystyki pracy programisty. Analzując rynek pracy, najwięcej ofert jest z dziedziny programowania, a sama dziedzina jest idealnym miejscem do wykorzystywania swojej kreatywności i inicjatywy. To wszystko spowodowało, że podjęta decyzja nie była tylko efektem "owczego pędu", a pierwszą, dokłądnie przemyślaną, decyzją związaną z rozwojem kariery zawodowej. </p>
+					<p> To co charakteryzuje mnie, jako osobę, to chyba determinacja, wizjonerstwo, chęć nauki i rozwoju, szukanie odpowiedzi na trudne pytania. Staram się codziennie czytać wartościowe książki. Fascynuje mnie niemal każda dziedzina naukowa, ale w szczególności psychologia, ekonomia, filozofia. </p>
+					<p> Moją pierwszą pasją, jak już wspomniałem jest piłka nożna. Dlatego od jakiegoś czasu, w godzinach popołudniowych (po 17:00) pracuje jako dziecięcy trener piłki nożnej. Wykorzystując inne swoje zainteresowania, pracuje nad takimi projektami jak: portal zwiazany z gospodarką lokalną oraz portalem związanym z sztuką przekwalifikowania. W końcu proces ten dokładnie teraz poznałem i chciałbym podzielić się tą wiedzą z innymi, być może komuś będę wstanie pomóc.</p>
 				</div>
 			</div>
 		</section>
@@ -105,7 +105,9 @@
 						<div style="clear: both"></div>
 					</div>
 					<div style="clear: both"></div>
-					<div id="presentation"><h1>PROCES MOJEJ NAUKI</h1><p>Możesz poznać proces mojej nauki klikając na dowolny powyższy przycisk. Ta dynamiczna zmiana treści została opracowana za pomocą JavaScript. Miłej lektury.</p></div>
+					<div id="presentation"><h1>PROCES MOJEJ NAUKI</h1><p>Możesz poznać proces mojej nauki klikając na dowolny powyższy przycisk. Ta dynamiczna zmiana treści została opracowana za pomocą JavaScript. Miłej lektury.</p>
+						<p>Jeśli chcesz poznać moje portfolio na GitHubie kliknij na przycisk -->> <button class="submit" id="button1">GitHub</button></p>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -113,27 +115,22 @@
 			<div class="board">
 				<div id="vision">
 					<h1 class="subtitle">Moja wizja</h1>
-					<div class="square">
-						<div id="triangle1">Język angielski/C++</div>
-						<div id="triangle2">HTML,CSS,JS</div>
-						<div id="triangle3">PHP,JAVA</div>
-						<div id="triangle4">Framworki</div>
-					</div>
-					<div class="square">
+					<div id="squ">
 						<p>Każdy z nas posiada jakieś plany. Ja nazywam je wizją przyszłości. Być może nazwa ta budzi kontrowersje. Moim zdaniem jednak świetnie odpowiada na takie pytania jak:</p>
 						<div class="bor">
-						<p>Kim jesteśmy?</p>
-						<p>Dokąd zmierzamy?</p>
-						<p>Co jest naszym drogowskazem?</p>
+							<p>Kim jesteśmy?</p>
+							<p>Dokąd zmierzamy?</p>
+							<p>Co jest naszym drogowskazem?</p>
 						</div>
 						<p>Staram się również trzymać tych zasad:</p>
 						<div class="bor">
-						<p>Ucz się z przeszłości.</p>
-						<p>Planuj przyszłość.</p>
-						<p>Żyj teraźniejszością.</p>
+							<p>Ucz się z przeszłości.</p>
+							<p>Planuj przyszłość.</p>
+							<p>Żyj teraźniejszością.</p>
 						</div>
+						<p>Poniszy rysunek przedstawia w postaci graficznej moje założenia na najbliższe dwa lata. Oprócz nauki różnych technologii webowych, chcę rozwijać swoje umiejętności interpersonalne, w tym szczególności sposób komunikacji i pracy w grupie. Oprócz tego, zależy mi na pogłębianu dotychczaswoej wiedzy z dziedziny ekonomii i biznesu, po to, aby móc lepiej dostosowywać rozwiązania do aktualnych potrzeb czy trendów oraz starać się dostrzegać nowe możliwości, które dają przewagę konukrecyjną potencjalnym partnerom biznesowym.</p>
+						<img src="img/Zalozenia.jpg" alt="moje założenia na najbliższe lata"/>
 					</div>
-					<div style="clear: both"></div>
 				</div>
 			</div>
 		</section>
@@ -141,7 +138,7 @@
 			<div class="boardtoo">
 				<div id="project">
 					<h1 class="subtitle">Moje projekty</h1>
-					<p>To są moje projekty:</p>
+					<p>To w krótce zostanie rozbudowane</p>
 				</div>
 			</div>
 		</section>
@@ -155,5 +152,6 @@
 <script src="jquery-3.3.1.min.js"></script>
 <script src="napis.js"></script>
 <script src="addelements.js"></script>
+<script src="button.js"></script>
 </body>
 </html>
